// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item should render 1`] = `
<div
  className="tc-list-item"
>
  <div
    className="tc-list-item-title"
  >
    <div
      className="tc-list-item-title-text"
      id={undefined}
    >
      Directives application Home Loan Account
    </div>
  </div>
  <div
    className="tc-list-item-definition-list"
  >
    <div
      className="tc-list-item-definition-item"
    >
      <div
        className="tc-list-item-definition-term"
      >
        Author
      </div>
      <div
        className="tc-list-item-definition-description"
        title="{name.firstName} {name.lastName}"
      >
        {name.firstName} {name.lastName}
      </div>
    </div>
    <div
      className="tc-list-item-definition-item"
    >
      <div
        className="tc-list-item-definition-term"
      >
        Created
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22"
      >
        2016-09-22
      </div>
    </div>
    <div
      className="tc-list-item-definition-item"
    >
      <div
        className="tc-list-item-definition-term"
      >
        Modified
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22"
      >
        2016-09-22
      </div>
    </div>
  </div>
</div>
`;

exports[`Item should render with actions 1`] = `
<div
  className="tc-list-item"
>
  <div
    className="tc-list-item-title"
  >
    <div
      className="tc-list-item-title-text"
      id={undefined}
    >
      Directives application Home Loan Account
    </div>
  </div>
  <div
    className="tc-actions"
    style={
      Object {
        "top": "5px",
      }
    }
  >
    <button
      className="btn btn-link"
      disabled={false}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    >
      <i
        aria-hidden="true"
        className="fa fa-edit"
        focusable="false"
        title={null}
      />
    </button>
  </div>
  <div
    className="tc-actions"
    style={
      Object {
        "top": "35px",
      }
    }
  >
    <button
      className="btn btn-link"
      disabled={false}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    >
      <i
        aria-hidden="true"
        className="fa fa-trash-o"
        focusable="false"
        title={null}
      />
    </button>
  </div>
  <div
    className="tc-list-item-definition-list"
  >
    <div
      className="tc-list-item-definition-item"
    >
      <div
        className="tc-list-item-definition-term"
      >
        Author
      </div>
      <div
        className="tc-list-item-definition-description"
        title="{name.firstName} {name.lastName}"
      >
        {name.firstName} {name.lastName}
      </div>
    </div>
    <div
      className="tc-list-item-definition-item"
    >
      <div
        className="tc-list-item-definition-term"
      >
        Created
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22"
      >
        2016-09-22
      </div>
    </div>
    <div
      className="tc-list-item-definition-item"
    >
      <div
        className="tc-list-item-definition-term"
      >
        Modified
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22"
      >
        2016-09-22
      </div>
    </div>
  </div>
</div>
`;

exports[`Item should render with custom selected class 1`] = `
<div
  className="tc-list-item selectedClass"
>
  <div
    className="tc-list-item-title"
  >
    <div
      className="tc-list-item-title-text"
      id={undefined}
    >
      Directives application Home Loan Account
    </div>
  </div>
  <div
    className="tc-list-item-definition-list"
  >
    <div
      className="tc-list-item-definition-item"
    >
      <div
        className="tc-list-item-definition-term"
      >
        Author
      </div>
      <div
        className="tc-list-item-definition-description"
        title="{name.firstName} {name.lastName}"
      >
        {name.firstName} {name.lastName}
      </div>
    </div>
    <div
      className="tc-list-item-definition-item"
    >
      <div
        className="tc-list-item-definition-term"
      >
        Created
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22"
      >
        2016-09-22
      </div>
    </div>
    <div
      className="tc-list-item-definition-item"
    >
      <div
        className="tc-list-item-definition-term"
      >
        Modified
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22"
      >
        2016-09-22
      </div>
    </div>
  </div>
</div>
`;

exports[`Item should render with icon 1`] = `
<div
  className="tc-list-item"
>
  <div
    className="tc-list-item-icon"
  >
    <i
      aria-hidden="true"
      className="fa fa-file-excel-o"
      focusable="false"
      title={null}
    />
  </div>
  <div
    className="tc-list-item-title"
  >
    <div
      className="tc-list-item-title-text"
      id={undefined}
    >
      Directives application Home Loan Account
    </div>
  </div>
  <div
    className="tc-list-item-definition-list"
  >
    <div
      className="tc-list-item-definition-item"
    >
      <div
        className="tc-list-item-definition-term"
      >
        Author
      </div>
      <div
        className="tc-list-item-definition-description"
        title="{name.firstName} {name.lastName}"
      >
        {name.firstName} {name.lastName}
      </div>
    </div>
    <div
      className="tc-list-item-definition-item"
    >
      <div
        className="tc-list-item-definition-term"
      >
        Created
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22"
      >
        2016-09-22
      </div>
    </div>
    <div
      className="tc-list-item-definition-item"
    >
      <div
        className="tc-list-item-definition-term"
      >
        Modified
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22"
      >
        2016-09-22
      </div>
    </div>
  </div>
</div>
`;

exports[`Item should render with id if provided 1`] = `
<div
  className="tc-list-item"
>
  <div
    className="tc-list-item-title"
  >
    <div
      className="tc-list-item-title-text"
      id="list-item-title"
    >
      Directives application Home Loan Account
    </div>
  </div>
  <div
    className="tc-list-item-definition-list"
  >
    <div
      className="tc-list-item-definition-item"
    >
      <div
        className="tc-list-item-definition-term"
      >
        Author
      </div>
      <div
        className="tc-list-item-definition-description"
        title="{name.firstName} {name.lastName}"
      >
        {name.firstName} {name.lastName}
      </div>
    </div>
    <div
      className="tc-list-item-definition-item"
    >
      <div
        className="tc-list-item-definition-term"
      >
        Created
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22"
      >
        2016-09-22
      </div>
    </div>
    <div
      className="tc-list-item-definition-item"
    >
      <div
        className="tc-list-item-definition-term"
      >
        Modified
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22"
      >
        2016-09-22
      </div>
    </div>
  </div>
</div>
`;

exports[`Item should render with item custom className 1`] = `
<div
  className="tc-list-item item-1-class"
>
  <div
    className="tc-list-item-title"
  >
    <div
      className="tc-list-item-title-text"
      id={undefined}
    >
      Directives application Home Loan Account
    </div>
  </div>
  <div
    className="tc-list-item-definition-list"
  >
    <div
      className="tc-list-item-definition-item"
    >
      <div
        className="tc-list-item-definition-term"
      >
        Author
      </div>
      <div
        className="tc-list-item-definition-description"
        title="{name.firstName} {name.lastName}"
      >
        {name.firstName} {name.lastName}
      </div>
    </div>
    <div
      className="tc-list-item-definition-item"
    >
      <div
        className="tc-list-item-definition-term"
      >
        Created
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22"
      >
        2016-09-22
      </div>
    </div>
    <div
      className="tc-list-item-definition-item"
    >
      <div
        className="tc-list-item-definition-term"
      >
        Modified
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22"
      >
        2016-09-22
      </div>
    </div>
  </div>
</div>
`;

exports[`Item should render with selected item 1`] = `
<div
  className="tc-list-item active"
>
  <div
    className="tc-list-item-title"
  >
    <div
      className="tc-list-item-title-text"
      id={undefined}
    >
      Directives application Home Loan Account
    </div>
  </div>
  <div
    className="tc-list-item-definition-list"
  >
    <div
      className="tc-list-item-definition-item"
    >
      <div
        className="tc-list-item-definition-term"
      >
        Author
      </div>
      <div
        className="tc-list-item-definition-description"
        title="{name.firstName} {name.lastName}"
      >
        {name.firstName} {name.lastName}
      </div>
    </div>
    <div
      className="tc-list-item-definition-item"
    >
      <div
        className="tc-list-item-definition-term"
      >
        Created
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22"
      >
        2016-09-22
      </div>
    </div>
    <div
      className="tc-list-item-definition-item"
    >
      <div
        className="tc-list-item-definition-term"
      >
        Modified
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22"
      >
        2016-09-22
      </div>
    </div>
  </div>
</div>
`;
